--- a/about-us.html
+++ b/about-us.html
@@ -9,7 +9,7 @@
     <meta name="description" content="meta description">
 
     <!-- Site title -->
-    <title>Galio - Mega Shop Responsive Bootstrap 4 Template</title>
+    <title>Galio - Mega Shop</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
     <!-- Bootstrap CSS -->
@@ -525,7 +525,7 @@
                             <div class="team-content text-center">
                                 <h3>Jonathan Scott</h3>
                                 <h6>CEO</h6>
-                                <p>Amadea Shop is a very slick and clean e-commerce template with endless possibilities.</p>
+                                <p>Amadea Shop is a very slick with endless possibilities.</p>
                             </div>
                         </div>
                     </div> <!-- end single team member -->
@@ -543,7 +543,7 @@
                             <div class="team-content text-center">
                                 <h3>oliver bastin</h3>
                                 <h6>designer</h6>
-                                <p>Amadea Shop is a very slick and clean e-commerce template with endless possibilities.</p>
+                                <p>Amadea Shop is a very slick with endless possibilities.</p>
                             </div>
                         </div>
                     </div> <!-- end single team member -->
@@ -561,7 +561,7 @@
                             <div class="team-content text-center">
                                 <h3>erik jonson</h3>
                                 <h6>developer</h6>
-                                <p>Amadea Shop is a very slick and clean e-commerce template with endless possibilities.</p>
+                                <p>Amadea Shop is a very slick with endless possibilities.</p>
                             </div>
                         </div>
                     </div> <!-- end single team member -->
@@ -579,7 +579,7 @@
                             <div class="team-content text-center">
                                 <h3>maria mandy</h3>
                                 <h6>marketing officer</h6>
-                                <p>Amadea Shop is a very slick and clean e-commerce template with endless possibilities.</p>
+                                <p>Amadea Shop is a very slick with endless possibilities.</p>
                             </div>
                         </div>
                     </div> <!-- end single team member -->
@@ -650,21 +650,21 @@
                         <div class="single-choose-item text-center mb-md-30 mb-sm-30">
                             <i class="fa fa-globe"></i>
                             <h4>free shipping</h4>
-                            <p>Amadea Shop is a very slick and clean e-commerce template with endless possibilities.</p>
+                            <p>Amadea Shop is a very slick with endless possibilities.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="single-choose-item text-center mb-md-30 mb-sm-30">
                             <i class="fa fa-plane"></i>
                             <h4>fast delivery</h4>
-                            <p>Amadea Shop is a very slick and clean e-commerce template with endless possibilities.</p>
+                            <p>Amadea Shop is a very slick with endless possibilities.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="single-choose-item text-center mb-md-30 mb-sm-30">
                             <i class="fa fa-comments"></i>
                             <h4>customers support</h4>
-                            <p>Amadea Shop is a very slick and clean e-commerce template with endless possibilities.</p>
+                            <p>Amadea Shop is a very slick with endless possibilities.</p>
                         </div>
                     </div>
                 </div>
@@ -834,9 +834,6 @@
             <div class="footer-bottom-area bg-gray pt-20 pb-20">
                 <div class="container">
                     <div class="footer-bottom-wrap">
-                        <div class="copyright-text">
-                            <p><a target="_blank" href="https://www.templateshub.net">Templates Hub</a></p>
-                        </div>
                         <div class="payment-method-img">
                             <img src="assets/img/payment.png" alt="">
                         </div>
