--- a/blog-left-sidebar-2-col.html
+++ b/blog-left-sidebar-2-col.html
@@ -9,7 +9,7 @@
     <meta name="description" content="meta description">
 
     <!-- Site title -->
-    <title>Galio - Mega Shop Responsive Bootstrap 4 Template</title>
+    <title>Galio - Mega Shop</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
     <!-- Bootstrap CSS -->
@@ -913,9 +913,6 @@
             <div class="footer-bottom-area bg-gray pt-20 pb-20">
                 <div class="container">
                     <div class="footer-bottom-wrap">
-                        <div class="copyright-text">
-                            <p><a target="_blank" href="https://www.templateshub.net">Templates Hub</a></p>
-                        </div>
                         <div class="payment-method-img">
                             <img src="assets/img/payment.png" alt="">
                         </div>
